crates/bevy_naga_oil/src/compose/tests/expected/missing_import.txt
error: required import 'missing' not found
   ┌─ tests/error_test/include.wgsl:11:13
   │
11 │     let x = missing::y();
   │             ^
   │
   = missing import 'missing'

